# xrpld-network-gen

./: .env  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  biome.json  default.xahaud.features.json  package.json  pnpm-lock.yaml  pyproject.toml  test.py  testing_config.py  tsconfig.json
.github/workflows/: codeql-analysis.yml  nodejs.yml  python.yml  verify.yml
Deploykit/: entrypoint
cli/: create_network.py  create_standalone.py
config/: rippled.cfg
example/: .gitignore  main.py  requirements.txt
scripts/: deploy.sh
src/: cli.ts  genesis.xahau.json  main.ts  network.ts  rippled_cfg.ts  versions.ts
src/deploykit/: config.json  xrpl.entrypoint
src/deploykit/ansible/: clean.yml  deps.yml  main.yml  run.sh
src/libs/: github.ts  rippled.ts
src/utils/: deployKit.ts  misc.ts
tests/: test_debugstream.py  utils.py  utils.ts
tests/fixtures/: test.json
tests/integration/: standalone.test.ts  test_local.py  test_main.py  test_network.py  test_standalone.py
tests/unit/: test_github.py  test_misc.py  test_netgen.py  test_publisher.py  test_xrpld.py
xrpld_netgen/: Dockerfile  cli.py  default.rippled.features.json  default.xahau.features.json  default.xahau.versions.json  default.xrpl.features.json  default.xrpl.versions.json  entrypoint  faucet.py  genesis.xahau.json  genesis.xrpl.json  main.py  network.py  network_gen.py  rippled_cfg.py  xrpld_cfg.py
xrpld_netgen/cideploy/: deploy.py  deploy.xahau.dockerfile  validators.txt
xrpld_netgen/deploykit/: config.json  deploy.xahau.dockerfile  network.entrypoint  nginx.dockerfile  prerequisites.sh  xahau.entrypoint  xrpl.entrypoint
xrpld_netgen/deploykit/ansible/: clean.sh  clean.yml  main.yml  run.sh
xrpld_netgen/deploykit/debugstream/: Dockerfile  server.py
xrpld_netgen/libs/: github.py  rippled.py  xrpld.py
xrpld_netgen/utils/: deploy_kit.py  misc.py
