[tool.poetry]
name = "xrpld-netgen"
version = "2.0.1"
description = "Xrpld network generator"
authors = ["Denis Angell <dangell@transia.co>"]

[tool.poetry.dependencies]
python = "^3.9.6"
pyyaml = "^6.0.1"
requests = "^2.31.0"
xrpld-publisher = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = ">=3.7,<4"
ruff = ">=0.8"

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [".venv", "tests", "dist", "keystore"]

[tool.ruff.lint]
# Mirrors flake8 as declared in Poetry (pycodestyle E/W, pyflakes F); isort (I).
# Former .flake8 also listed D/ANN/ABS/DAR/BLK plugins but they were not dependencies.
select = ["E", "W", "F", "I"]
ignore = ["E203"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xrpld-netgen = "xrpld_netgen.cli:main"
